🚓🎾 Checkpoint ./generator/sketch.js:62590089/48 ./gallery/index.html:62741461/1978 ./gallery/css.style:62741461/1078 ./generator/index.html:62590089/269 ./generator/style.css:62590089/378 ./index.js:62590089/66

--- a/generator/style.css
+++ b/generator/style.css
@@ -14,11 +14,11 @@ button {
   margin: 0%;
 }
 
-#descriptionContainer {
+/* #descriptionContainer {
   margin-bottom: 3%;
   margin-left: 3%;
   margin-right: 3%;
-}
+} */
 
 html, body {
   margin: 0;
