🚌👹 Checkpoint ./generator/gallery/app.js:274672/1492:62590089/173 ./generator/gallery/index.html:274672/1059:62741461/4569 ./generator/gallery/style.css:274672/2:62741461/2776 ./generator/gallery/index-tmp.html:274672/1445 ./generator/sketch.js:274672/23:62590089/4

--- a/generator/gallery/style.css
+++ b/generator/gallery/style.css
@@ -3,7 +3,7 @@ body {
     text-align: center;
 }
 
-.gallery {
+#gallery {
     display: flex;
     justify-content: space-between;
 }
@@ -30,4 +30,8 @@ body {
 
 .description p {
     font-size: 1em;
+}
+
+background{
+  color: 
 }
