--- a/generator/gallery/style.css
+++ b/generator/gallery/style.css
@@ -12,7 +12,7 @@ body {
     width: 45%; /* Adjust as needed */
     box-sizing: border-box;
     padding: 20px;
-    border: 1px solid #ccc; /* Add a border for separation */
+/*     border: 1px solid #ccc; Add a border for separation */
 }
 
 .artwork img {
@@ -30,8 +30,4 @@ body {
 
 .description p {
     font-size: 1em;
-}
-
-background{
-  color: 
 }
