--- a/generator/style.css
+++ b/generator/style.css
@@ -21,7 +21,9 @@ input {
   left: 1042px;
   width: 265px;
   height: 30px;
-  
+  border: 1px solid #000;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 html, body {
